--- a/templates/experiment/modify.html
+++ b/templates/experiment/modify.html
@@ -396,9 +396,10 @@
               axios
               .post('/updateexp', this.exp)
               .then(res => {
-                if (res.data.message == "ok")
+                if (res.data.message == "ok") {
                   alert("Ok! The experiment was modified");
-                else
+                  document.location = "/experiment/detail/{{ eid }}"
+                } else
                   alert("An Error Occured");
               }).catch(function (err) {
                 console.log(err);
