--- a/templates/material/list.html
+++ b/templates/material/list.html
@@ -321,34 +321,36 @@
         methods: {
           confirmDelete: function (mid) {
             if (confirm('Are you sure?\nPress OK will delete the material! If you do not want to delte, press Cancel please!\nFor testing, Please delete your own test case, do not delete the original data, thank you!')) {
-            axios
-            .get('/delmtr/' + mid)
-            .then(res => {
-              // console.log(res.data);
-              if (res.data.message == "ok") {
-                alert("the material (id = " + mid + ") was deteleted");
-                window.location.reload(true);
-              }
-            })
-            .catch(err => {
-              console.log(err);
-            });
-          }
+              axios
+              .get('/delmtr/' + mid)
+              .then(res => {
+                // console.log(res.data);
+                if (res.data.message == "ok") {
+                  alert("the material (id = " + mid + ") was deteleted");
+                  window.location.reload(true);
+                } else {
+                  alert("Can not remove this material, because it is in use!");
+                }
+              })
+              .catch(err => {
+                console.log(err);
+              });
+            }
+          },
         },
-      },
-      mounted() {
-        // verify_token();
-        axios
-        .get('/material')
-        .then(res => {
-          this.materials = res.data;
-          // console.log(res.data);
-        })
-        .catch(err => {
-          console.log(err);
-        });
-      },
-      delimiters: ['[[',']]']
+        mounted() {
+          // verify_token();
+          axios
+          .get('/material')
+          .then(res => {
+            this.materials = res.data;
+            // console.log(res.data);
+          })
+          .catch(err => {
+            console.log(err);
+          });
+        },
+        delimiters: ['[[',']]']
       });
     </script>
 
