--- a/templates/material/modify.html
+++ b/templates/material/modify.html
@@ -357,9 +357,10 @@
               axios
               .post('/updatemtr', this.mtr)
               .then(res => {
-                if (res.data.message == "ok")
+                if (res.data.message == "ok") {
                   alert("Ok! The material was modified");
-                else
+                  document.location = "/material/list";
+                } else
                   alert("An Error Occured");
               }).catch(function (err) {
                 console.log(err);
