--- a/templates/specimen/modify.html
+++ b/templates/specimen/modify.html
@@ -366,9 +366,10 @@
               axios
               .post('/updatespc', this.spc)
               .then(res => {
-                if (res.data.message == "ok")
+                if (res.data.message == "ok") {
                   alert("Ok! The specimen was modified");
-                else
+                  document.location='/specimen/list';
+                } else
                   alert("An Error Occured");
               }).catch(function (err) {
                 console.log(err);
