--- a/templates/rotating/new.html
+++ b/templates/rotating/new.html
@@ -442,6 +442,7 @@
                 console.log(res.data);
                 if (res.data.message == "ok") {
                   alert("Ok! A new test was created");
+                  document.location = "/rotating/list";
                 } else {
                   alert("An Error Occured");
                 }
