--- a/templates/mb/modify.html
+++ b/templates/mb/modify.html
@@ -450,6 +450,7 @@
                 console.log(res.data);
                 if (res.data.message == "ok") {
                   alert("Ok! The test was modified");
+                  document.location = "/mb/detail/{{ mbid }}";
                 } else {
                   alert("An Error Occured");
                 }
