--- a/templates/mb/new.html
+++ b/templates/mb/new.html
@@ -447,6 +447,7 @@
                 console.log(res.data);
                 if (res.data.message == "ok") {
                   alert("Ok! A new test was created");
+                  document.location = "/mb/list";
                 } else {
                   alert("An Error Occured");
                 }
