--- a/templates/tension/new.html
+++ b/templates/tension/new.html
@@ -457,6 +457,7 @@
                 console.log(res.data);
                 if (res.data.message == "ok") {
                   alert("Ok! A new test was created");
+                  document.location = "/tension/list";
                 } else {
                   alert("An Error Occured");
                 }
