--- a/templates/tooth/modify.html
+++ b/templates/tooth/modify.html
@@ -477,6 +477,7 @@
                 console.log(res.data);
                 if (res.data.message == "ok") {
                   alert("Ok! The test was modified");
+                  document.location = "/tooth/detail/{{ thooth_id }}";
                 } else {
                   alert("An Error Occured");
                 }
