--- a/templates/tooth/new.html
+++ b/templates/tooth/new.html
@@ -473,6 +473,7 @@
                 console.log(res.data);
                 if (res.data.message == "ok") {
                   alert("Ok! A new test was created");
+                  document.location = "/tooth/list";
                 } else {
                   alert("An Error Occured");
                 }
