--- a/templates/torsion/modify.html
+++ b/templates/torsion/modify.html
@@ -455,6 +455,7 @@
                 console.log(res.data);
                 if (res.data.message == "ok") {
                   alert("Ok! A new test was modified");
+                  document.location = "/torsion/detail/{{ torsion_id }}";
                 } else {
                   alert("An Error Occured");
                 }
