--- a/templates/torsion/new.html
+++ b/templates/torsion/new.html
@@ -452,6 +452,7 @@
                 console.log(res.data);
                 if (res.data.message == "ok") {
                   alert("Ok! A new test was created");
+                  document.location = "/torsion/list";
                 } else {
                   alert("An Error Occured");
                 }
