--- a/templates/tooth/detail.html
+++ b/templates/tooth/detail.html
@@ -254,7 +254,7 @@
                       <tr><td><i class="fa fa-align-justify"> ID </i></td> <td>[[ th.tooth_id ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Gear Label </i></td> <td>[[ th.sname ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Material </i></td> <td>[[ th.mid ]]</td></tr>
-                      <tr><td><i class="fa fa-align-justify"> No of Teeth </i></td> <td>[[ th.nooftheeth ]]</td></tr>
+                      <tr><td><i class="fa fa-align-justify"> No. of Teeth </i></td> <td>[[ th.nooftheeth ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Tooth Width(mm) </i></td> <td>[[ dsp.tw ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Modulus(mm) </i></td> <td>[[ dsp.md ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Fracture Mode </i></td> <td>[[ dsp.fm ]]</td></tr>
