--- a/templates/torsion/detail.html
+++ b/templates/torsion/detail.html
@@ -255,12 +255,14 @@
                       <tr><td><i class="fa fa-align-justify"> Specimen Name </i></td> <td>[[ trs.sname ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Material </i></td> <td>[[ trs.mid ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Diameter(mm) </i></td> <td>[[ trs.diameter ]]</td></tr>
-                      <tr><td><i class="fa fa-align-justify"> Moment(N.mm) </i></td> <td>[[ trs.moment ]]</td></tr>
-                      <tr><td><i class="fa fa-align-justify"> Fatigue Life Nf </i></td> <td>[[ trs.FatigueLifeNf ]]</td></tr>
-                      <tr><td><i class="fa fa-align-justify"> Fractured Locs </i></td> <td>[[ trs.FracturedLocs ]]</td></tr>
-                      <tr><td><i class="fa fa-align-justify"> Speed </i></td> <td>[[ trs.speed ]]</td></tr>
-                      <tr><td><i class="fa fa-align-justify"> lp </i></td> <td>[[ trs.lp ]]</td></tr>
+                      <tr><td><i class="fa fa-align-justify"> Effect Length(mm) </i></td> <td>[[ trs.tlen ]]</td></tr>
+                      <tr><td><i class="fa fa-align-justify"> Max Torque(Nm) </i></td> <td>[[ trs.max_torque ]]</td></tr>
+                      <tr><td><i class="fa fa-align-justify"> Min Torque(Nm) </i></td> <td>[[ trs.min_torque ]]</td></tr>
+                      <tr><td><i class="fa fa-align-justify"> Max Theta(rad) </i></td> <td>[[ trs.max_theta ]]</td></tr>
+                      <tr><td><i class="fa fa-align-justify"> Min Theta(rad) </i></td> <td>[[ trs.min_theta ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Stress(MPa) </i></td> <td>[[ trs.stress ]]</td></tr>
+                      <tr><td><i class="fa fa-align-justify"> Fatigue Life Nf </i></td> <td>[[ trs.FatigueLifeNf ]]</td></tr>
+                      <tr><td><i class="fa fa-align-justify"> Fractured Locs From Fixed End(mm) </i></td> <td>[[ trs.FracturedLocs ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Run Out Cycles </i></td> <td>[[ trs.runoutcycles ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Run Out Time </i></td> <td>[[ trs.runouttime ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Description </i></td> <td>[[ trs.description ]]</td></tr>
