--- a/templates/mb/list.html
+++ b/templates/mb/list.html
@@ -257,7 +257,7 @@
                         <th>UTS(MPa))</th>
                         <th>Yield(Mpa)</th>
                         <th>Fatigue Life Nf</th>
-                        <!-- th>Fractured Locs</th>
+                        <!-- th>Fractured Locs From Fixed End(mm)</th>
                         <th>Speed</th>
                         <th>lp</th>
                         <th>Stress</th>
