--- a/templates/rotating/modify.html
+++ b/templates/rotating/modify.html
@@ -266,19 +266,19 @@
                     <label for="rotating.diameter">Diameter(mm)</label>
                     <input v-model="rotating.diameter" class="form-control" id="diameter" type="numeric" @input="calLz">
 
-                    <label for="rotating.moment">Moment(N.mm)</label>
+                    <label for="rotating.moment">Moment(N.m)</label>
                     <input v-model="rotating.moment" class="form-control" id="moment" type="numeric" @input="calStress">
                     
                     <label for="rotating.FatigueLifeNf">Fatigue Life Nf</label>
                     <input v-model="rotating.FatigueLifeNf" class="form-control" id="FatigueLifeNf" type="numeric">
                     
-                    <label for="rotating.FracturedLocs">FracturedLocs</label>
+                    <label for="rotating.FracturedLocs">Fractured Locs From Fixed End(mm) From Fixed End(mm)</label>
                     <input v-model="rotating.FracturedLocs" class="form-control" id="FracturedLocs" type="numeric">
                     
-                    <label for="rotating.speed">Speed</label>
+                    <label for="rotating.speed">Speed(rpm)</label>
                     <input v-model="rotating.speed" class="form-control" id="speed" type="numeric">
                     
-                    <label for="rotating.lp">lz</label><p>
+                    <label for="rotating.lp">Iz(moment of inertia)</label><p>
                       <!-- input v-model="rotating.lp" class="form-control" id="lp" type="numeric" -->
                       <span>[[ rotating.lp ]]</span></p>
                       
@@ -422,7 +422,7 @@
             result = result & this.grateThanZero(this.rotating.diameter,      "Diameter");
             result = result & this.grateThanZero(this.rotating.moment,        "Moment");
             result = result & this.mustBeNumeric(this.rotating.FatigueLifeNf, "Fatigue Life Nf");
-            result = result & this.mustBeNumeric(this.rotating.FracturedLocs, "Fractured Locs");
+            result = result & this.mustBeNumeric(this.rotating.FracturedLocs, "Fractured Locs From Fixed End(mm)");
             result = result & this.mustBeNumeric(this.rotating.speed,         "Speed");
             // result = result & this.mustBeNumeric(this.rotating.lp,            "lp");
             // result = result & this.mustBeNumeric(this.rotating.stress,        "Stress");
@@ -467,8 +467,8 @@
             this.rotating.speed = 0;
             this.rotating.lp = 0;
             this.rotating.stress = 0;
-            this.rotating.runoutcycles = 0;
-            this.rotating.runouttime = 0;
+            this.rotating.runoutcycles = 2;
+            this.rotating.runouttime = 1;
             this.rotating.description = "";
             this.rotating.pic1 = "";
             this.rotating.pic2 = "";
