--- a/templates/tension/detail.html
+++ b/templates/tension/detail.html
@@ -261,7 +261,7 @@
                       <tr><td><i class="fa fa-align-justify"> Amp Load(KN) </i></td> <td>[[ tns.ampload ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Ratio Of Load </i></td> <td>[[ tns.ratioofload ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Fatigue Life Nf </i></td> <td>[[ tns.FatigueLifeNf ]]</td></tr>
-                      <tr><td><i class="fa fa-align-justify"> Fractured Locs </i></td> <td>[[ tns.FracturedLocs ]]</td></tr>
+                      <tr><td><i class="fa fa-align-justify"> Fractured Locs From Fixed End(mm) </i></td> <td>[[ tns.FracturedLocs ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Run Out Cycles </i></td> <td>[[ tns.runoutcycles ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Run Out Time </i></td> <td>[[ tns.runouttime ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Description </i></td> <td>[[ tns.description ]]</td></tr>
