--- a/templates/tension/modify.html
+++ b/templates/tension/modify.html
@@ -290,7 +290,7 @@
                     <label for="tension.FatigueLifeNf">Fatigue Life Nf</label>
                     <input v-model="tension.FatigueLifeNf" class="form-control" id="FatigueLifeNf" type="numeric">
                     
-                    <label for="tension.FracturedLocs">FracturedLocs</label>
+                    <label for="tension.FracturedLocs">Fractured Locs From Fixed End(mm)</label>
                     <input v-model="tension.FracturedLocs" class="form-control" id="FracturedLocs" type="numeric">
                                         
                     <label for="tension.runoutcycles">Run Out Cycles</label>
@@ -435,7 +435,7 @@
             result = result & this.mustBeNumeric(this.tension.meanload,          "Mean Load");
             // result = result & this.mustBeNumeric(this.tension.maxload,    "Max Load");
             result = result & this.mustBeNumeric(this.tension.FatigueLifeNf, "Fatigue Life Nf");
-            result = result & this.mustBeNumeric(this.tension.FracturedLocs, "Fractured Locs");
+            result = result & this.mustBeNumeric(this.tension.FracturedLocs, "Fractured Locs From Fixed End(mm)");
             // result = result & this.mustBeNumeric(this.tension.lp,            "lp");
             // result = result & this.mustBeNumeric(this.tension.stress,        "Stress");
             result = result & this.grateThanZero(this.tension.runoutcycles,  "Run Out Cycles");
