--- a/templates/tooth/list.html
+++ b/templates/tooth/list.html
@@ -257,7 +257,7 @@
                         <th>Stress_Max(Mpa)</th>
                         <th>Stress_Min(Mpa)</th>
                         <th>Fatigue Life Nf</th>
-                        <!-- th>Fractured Locs</th>
+                        <!-- th>Fractured Locs From Fixed End(mm)</th>
                         <th>Speed</th>
                         <th>lp</th>
                         <th>Stress</th>
