--- a/templates/torsion/list.html
+++ b/templates/torsion/list.html
@@ -257,9 +257,9 @@
                         <th>Stress_Max(Mpa)</th>
                         <th>Stress_Min(Mpa)</th>
                         <th>Fatigue Life Nf</th>
-                        <!-- th>Fractured Locs</th>
+                        <!-- th>Fractured Locs From Fixed End(mm)</th>
                         <th>Speed</th>
-                        <th>lp</th>
+                        <th>Ip(The polar moment of inertia)</th>
                         <th>Stress</th>
                         <th>Run out Cycles</th>
                         <th>Run Out Time</th>
