--- a/templates/mb/modify.html
+++ b/templates/mb/modify.html
@@ -289,7 +289,7 @@
                     <label for="mb.mb_yield">Yield(Mpa)</label>
                     <input v-model="mb.mb_yield" class="form-control" id="mb_yield" type="numeric">
 
-                    <label for="mb.area_red">Area Red.(%d)</label>
+                    <label for="mb.area_red">Area Red.(%)</label>
                     <input v-model="mb.area_red" class="form-control" id="area_red" type="numeric">
 
                     <label for="mb.elongation">Elogation(%)</label>
