--- a/templates/tooth/new.html
+++ b/templates/tooth/new.html
@@ -260,7 +260,7 @@
                     </option>
                     </select>
 
-                    <label for="tooth.nooftheeth">No. of Teethh</label>
+                    <label for="tooth.nooftheeth">No. of Teeth</label>
                     <input v-model="tooth.nooftheeth" class="form-control" id="nooftheeth" type="numeric">
 
                     <label for="tooth.toothwidth">Tooth Width(mm)</label>
