--- a/templates/rotating/new.html
+++ b/templates/rotating/new.html
@@ -269,13 +269,13 @@
                     <label for="rotating.FatigueLifeNf">Fatigue Life Nf</label>
                     <input v-model="rotating.FatigueLifeNf" class="form-control" id="FatigueLifeNf" type="numeric">
                     
-                    <label for="rotating.FracturedLocs">Fractured Locs From Fixed End(mm) From Fixed End(mm)</label>
+                    <label for="rotating.FracturedLocs">Fractured Locs From Fixed End(mm)</label>
                     <input v-model="rotating.FracturedLocs" class="form-control" id="FracturedLocs" type="numeric">
                     
                     <label for="rotating.speed">Speed(rpm)</label>
                     <input v-model="rotating.speed" class="form-control" id="speed" type="numeric">
                     
-                    <label for="rotating.lp">lz</label><p>
+                    <label for="rotating.lp">Iz(moment of inertia)</label><p>
                     <!-- input v-model="rotating.lp" class="form-control" id="lp" type="numeric" -->
                     <span>[[ rotating.lp ]]</span></p>
                     
