--- a/templates/main.html
+++ b/templates/main.html
@@ -66,7 +66,7 @@
           <a class="c-sidebar-nav-link" href="rotating/list">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
-            </svg> Rotating Bending
+            </svg> Rotation Bending
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
