--- a/templates/rotating/list.html
+++ b/templates/rotating/list.html
@@ -62,7 +62,7 @@
           <a class="c-sidebar-nav-link" href="rotating/list">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
-            </svg> Rotating Bending
+            </svg> Rotation Bending
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
@@ -227,8 +227,8 @@
           <!-- Breadcrumb-->
           <ol class="breadcrumb border-0 m-0">
             <li class="breadcrumb-item"><a href="main">Home</a></li>
-            <li class="breadcrumb-item active">Rotating Bending Test List</li>
-            <li class="breadcrumb-item"><a href="rotating/new">New Rotating Bending Test</a></li>
+            <li class="breadcrumb-item active">Rotation Bending Test List</li>
+            <li class="breadcrumb-item"><a href="rotating/new">New Rotation Bending Test</a></li>
             <!-- Breadcrumb Menu-->
           </ol>
         </div>
@@ -243,7 +243,7 @@
 
               <div class="card">
                 <div class="card-header">
-                  <i class="fa fa-align-justify"></i> Rotating Bending Test List
+                  <i class="fa fa-align-justify"></i> Rotation Bending Test List
                 </div>
                 <div class="card-body">
                   <table id="rotating_list" name="rotating_list" class="table table-responsive-sm table-bordered table-striped table-sm">
