--- a/templates/rotating/new.html
+++ b/templates/rotating/new.html
@@ -62,7 +62,7 @@
           <a class="c-sidebar-nav-link" href="rotating/list">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
-            </svg> Rotating Bending
+            </svg> Rotation Bending
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
@@ -241,7 +241,7 @@
             <div class="fade-in">
               <div class="card">
                 <div class="card-header">
-                  <i class="fa fa-align-justify"> </i> New Rotating Bending Test
+                  <i class="fa fa-align-justify"> </i> New Rotation Bending Test
                 </div>
                 <div class="card-body">
                   <form id = "new_rotating">
